@@ -15,7 +15,22 @@ dependencies {
     testImplementation 'org.assertj:assertj-core:3.22.0'
 }
 
+tasks.withType(Test).configureEach {
+    jvmArgs += [
+        "--add-opens=java.base/java.net=ALL-UNNAMED",
+        "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED"
+    ]
+}
+
 graalvmNative {
+    binaries {
+        all {
+            buildArgs.addAll([
+                '--add-opens=java.base/java.net=ALL-UNNAMED',
+                '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
+            ])
+        }
+    }
     agent {
         defaultMode = "conditional"
         modes {
